unpackaged/main/default/objects/State__c/State__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-25 To maintain state records.</description>
    <label>State</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>