unpackaged/main/default/objects/State__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>PS-MC-SB-25 It is use to represent is region of state</description>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This region does not belong to selected country. Please reselect the region.</errorMessage>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Region__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>States</relationshipLabel>
    <relationshipName>States</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>